# dream-talker

./: .gitignore  MEMBER.md  README.md
client/: .config.yaml  .gitignore  README.md  app.py  log.py  pyproject.toml  recorder.py
plans/: api_plan.md  roadmap.md
server/: .config.yaml  .gitignore  README.md  app.py  auth.py  check_vad_params.py  database.py  log.py  pyproject.toml  records.py  schemas.py  storage.py
server/stt/: __init__.py  base.py  dummy_engine.py  funasr_engine.py
server/vad/: engine.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui-react/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
ui-react/components/: CalendarWidget.tsx  DateSelector.tsx  KeywordHeatmap.tsx  RecordCard.tsx  SearchBar.tsx  StatisticsPanel.tsx
ui-react/contexts/: LanguageContext.tsx
ui-react/services/: geminiService.ts  mockData.ts
ui-react/utils/: translations.ts
ui/server/: index.js
ui/src/: App.vue  LanguageProvider.vue  main.ts  types.ts
ui/src/api/: records.ts
ui/src/components/: CalendarWidget.vue  DateSelector.vue  KeywordHeatmap.vue  RecordCard.vue  SearchBar.vue  StatisticsPanel.vue  Timeline.vue
ui/src/composables/: useLanguage.ts
ui/src/router/: index.ts
ui/src/services/: mockData.ts
ui/src/utils/: translations.ts  webauthn.ts
ui/src/views/: DailyView.vue  LoginView.vue  SettingsView.vue  StatsView.vue
