[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.2",
    "funasr>=1.2.7",
    "minio>=7.2.20",
    "modelscope>=1.33.0",
    "pytz>=2025.2",
    "silero-vad>=6.2.0",
    "uvicorn[standard]>=0.38.0",
]
